# drs-pad

./: .gitmodules  README.md
pico/: CMakeLists.txt  main.cpp  ws2812.hpp
pico/pico_neopixels/: CMakeLists.txt
py/: compression_test.py  main.py  test.py
rust/: .gitignore  Cargo.toml  flake.nix
rust/src/: main.rs
src/: .gitignore  Makefile  main.cpp
